@@ -4,7 +4,9 @@
 * $Author$
 *
 * The Netarchive Suite - Software to harvest and preserve websites
-* Copyright 2004-2010 Det Kongelige Bibliotek and Statsbiblioteket, Denmark
+* Copyright 2004-2012 The Royal Danish Library, the Danish State and
+ * University Library, the National Library of France and the Austrian
+ * National Library.
 *
 * This library is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public
@@ -32,13 +34,12 @@ import dk.netarkivet.common.exceptions.ArgumentNotValid;
 import dk.netarkivet.harvester.harvesting.distribute.MetadataEntry;
 import dk.netarkivet.testutils.StringAsserts;
 
-
 /** Test-class for AliasInfo class. */
 public class AliasInfoTester extends TestCase {
 
-    String nullString = null;
+    final String nullString = null;
     String emptyString = "";
-    Date nullDate = null;
+    final Date nullDate = null;
     Date realDate = new Date();
     String aliasDomain = "netarkivet.dk";
     String afatherDomain = "kb.dk";
@@ -155,9 +156,9 @@ public class AliasInfoTester extends TestCase {
         MetadataEntry meta = null;
         // Tests for valid arguments:
         // List<AliasInfo> aliases, Long origHarvestDefinitionID, int harvestNum, Long jobId)
-        Long jobId = new Long(42L);
+        Long jobId = Long.valueOf(42L);
         int harvestNum = 1;
-        Long origHarvestDefinitionID = new Long(2L);
+        Long origHarvestDefinitionID = Long.valueOf(2L);
         try {
             MetadataEntry.makeAliasMetadataEntry(null, null, 0, null);
             fail("Exception expected with null arguments");
