@@ -4,7 +4,9 @@
 * $Author$
 *
 * The Netarchive Suite - Software to harvest and preserve websites
-* Copyright 2004-2010 Det Kongelige Bibliotek and Statsbiblioteket, Denmark
+* Copyright 2004-2012 The Royal Danish Library, the Danish State and
+ * University Library, the National Library of France and the Austrian
+ * National Library.
 *
 * This library is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public
@@ -75,7 +77,7 @@ public class SparsePartialHarvestTester extends DataModelTestCase {
      */
     public void testGetSparsePartialHarvest() {
         if (harvest.oid == null) {
-            harvest.setOid(new Long(1L));
+            harvest.setOid(Long.valueOf(1L));
         }
         SparsePartialHarvest sph = HarvestDefinitionDBDAO.getInstance()
         .getSparsePartialHarvest(harvestName);
