@@ -4,7 +4,9 @@
  * Date:        $Date$
  *
  * The Netarchive Suite - Software to harvest and preserve websites
- * Copyright 2004-2010 Det Kongelige Bibliotek and Statsbiblioteket, Denmark
+ * Copyright 2004-2012 The Royal Danish Library, the Danish State and
+ * University Library, the National Library of France and the Austrian
+ * National Library.
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -44,7 +46,7 @@ public class CrawlStatusMessageListener implements MessageListener {
         if (naMsg instanceof CrawlStatusMessage) {
             CrawlStatusMessage csm = (CrawlStatusMessage) naMsg;
             status_codes.add(csm.getStatusCode());
-            jobids.add(new Long(csm.getJobID()));
+            jobids.add(Long.valueOf(csm.getJobID()));
             messages.add(csm);
             synchronized(this) {
                 notifyAll();
