@@ -4,7 +4,9 @@
  * Author:      $Author$
  *
  * The Netarchive Suite - Software to harvest and preserve websites
- * Copyright 2004-2010 Det Kongelige Bibliotek and Statsbiblioteket, Denmark
+ * Copyright 2004-2012 The Royal Danish Library, the Danish State and
+ * University Library, the National Library of France and the Austrian
+ * National Library.
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -322,7 +324,7 @@ public class ARCArchiveAccessTester extends TestCase {
             // instead of LENGTH_HEADER_FIELD_KEY
             metadata.put(ARCConstants.LENGTH_FIELD_KEY,
                          Integer.toString(data.length));
-            Long dummyOffset = new Long(
+            Long dummyOffset = Long.valueOf(
                     0L); //Note: offset is not stored as a String, but as a Long
             metadata.put(ARCConstants.ABSOLUTE_OFFSET_KEY, dummyOffset);
 
@@ -331,7 +333,7 @@ public class ARCArchiveAccessTester extends TestCase {
                         = new ARCRecordMetaData(arcFile, metadata);
                 return new BitarchiveRecord(
                         new ARCRecord(new ByteArrayInputStream(data),
-                                      meta));
+                                      meta), arcFile);
             } catch (IOException e) {
                 fail("Cant't create metadata record");
                 return null;
